--- a/news.html
+++ b/news.html
@@ -4,62 +4,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top Bar Navigation</title>
+    <title>News | Riot Games</title>
     <link rel="stylesheet" href="news.css" />
   </head>
   <body>
-    <div class="top-bar">
-      <div class="left">
-        <div class="logo" id="Riot Games Name" style="margin-right: 15px;">
-          <img src="images/riot games logo test.png" alt="Riot Games Name" />
-        </div>
-        <div class="logo" id="Riot Games Logo" style="margin-right: 30px;">
-          <img src="images/riot games logo.png" alt="Riot Games Logo" />
-        </div>
-        <div class="dropdown" style="margin-right: 30px;" onclick="toggleContent('whoWeAreContent')">
-          <span>
-            WHO WE ARE
-            <img src="images/collapsible down logo.png" alt="WHO WE ARE DOWN" />
-          </span>
-          <div class="dropdown-content">
-            <button class="dropdown-btn">About Riot</button>
-            <button class="dropdown-btn">Diversity & Inclusion</button>
-            <button class="dropdown-btn">Social Impact</button>
-          </div>
-        </div>
-        <div class="dropdown" style="margin-right: 30px;">
-          <span>
-            WORK WITH US
-            <img src="images/collapsible down logo.png" alt="WORK WITH US DOWN" />
-          </span>
-          <div class="dropdown-content">
-            <button class="dropdown-btn">Jobs</button>
-            <button class="dropdown-btn">Benefits</button>
-            <button class="dropdown-btn">Offices</button>
-            <button class="dropdown-btn">Life At Riot</button>
-          </div>
-        </div>
-        <div class="news" style="margin-right: 30px;">
-          <button>NEWS</button>
+    <div class="nav_container">
+      <div class="riot_logo">
+        <a id="img_link" href="index.html"><img id="img_riotLogo" src="images/white_logo.png" alt="Riot Logo" /></a>
+      </div>
+      <div class="fistLogo_container">
+        <div class="riot_secondlogo">
+          <img id="img_secondLogo" src="images/second_logo.png" alt="Fist Logo" />
         </div>
       </div>
-      <div class="right">
-        <div class="language-selector" onclick="toggleLanguages()">
-          <img src="images/language logo.png" alt="Language logo" />
-          <select id="languages">
-            <option value="en">English</option>
-            <option value="es">Spanish</option>
-            <option value="fr">French</option>
-            <option value="de">German</option>
-            <!-- Add more languages as needed -->
-          </select>
+      <div class="Info_container">
+        <div class="info_list">
+          <ul id="InfoList">
+            <li><a href="about-us.html" style="text-decoration: none; color: white;">ABOUT US</a></li>
+            <li><a href="news.html" style="text-decoration: none; color: white;">NEWS</a></li>
+          </ul>
         </div>
-        <div class="search-bar" style="margin-right: 5px;">
-          <input type="text" placeholder="Search" />
+      </div>
+      <div class="upper-right_nav">
+        <div class="worldLogo_container">
+          <img id="world_logo" src="images/world.png" alt="World" />
+        </div>
+        <div class="search_container">
+          <input class="search_box" type="text" placeholder="SEARCH..." />
         </div>
         <div class="signIn_container">
           <button id="signIn_button">SIGN IN</button>
-       </div>
+        </div>
       </div>
     </div>
 
@@ -479,7 +454,7 @@
       <div class="separator"></div>
       <div class="footer-bottom">
         <div class="left-text">
-          Cookie Preferences | ©2023 Riot Games, Inc. All Rights Reserved.
+          <p>Azure Python | All rights reserved 2023.</p>
         </div>
         <div class="right-text">
           TO THE SURFACE ▲
