News Page Dropdown Filter

--- a/news.html
+++ b/news.html
@@ -41,9 +41,21 @@
 
     <div class="explore-hero__filter"></div>
     <div class="custom-box">
-      <span id="showMe" style="color: rgb(101, 100, 98);">Show Me</span>
-      <span class="collapsible-label" onclick="toggleCollapsible()">Everything</span>
-      <div class="collapsible-content" id="collapsibleContent"></div>
+      <span id="showMe">Show Me </span>
+      <span id="everything">Everything</span> <span><img id="NewsDropdown" src="images/dropdown_gray.png" alt="NEWS DROPDOWN"/></span>
+      <div class="dropdown_option" id="options">
+        <div class="ximg"><img id="x_button" src="images/gray_x.png" alt="X"/></div>
+        <span id="filter" >Filter by:</span>
+        <ul>
+          <li>Everything</li>
+          <li id="offices">Offices</li>
+          <li>Disciplines</li>
+          <li>News</li>
+          <li>Inside Riot</li>
+          <li>One-Shot</li>
+          <li>Tech Blog</li>
+        </ul>
+      </div>
     </div>
     <div class="custom-box-responsive">
       <div class="brush-icon">
