Offices Open Position Changing

--- a/about-us.html
+++ b/about-us.html
@@ -191,51 +191,57 @@
             </div>
           </div>
 
-          <div class="row">
-            <div class="location-container">
-              <div class="image-column">
-                <img src="images/dubai.jpg" alt="Dubai" width="300" height="200" />
-              </div>
-              <div class="info-column">
-                <h3 class="heading heading--5 heading--light">Dubai</h3>
-                <p class="heading heading--5 heading--light heading--muted">UAE</p>
-              </div>
-              <div class="open-positions-column">
-                <p>Open Positions: <span class="badge">0</span></p>
+          <div class="whole_row_container">
+            <div class="row_container" id="row_container">
+
+            <div class="row">
+              <div class="location-container">
+                <div class="image-column">
+                  <img id="image1" src="images/dubai.jpg" alt="Dubai" width="300" height="150" />
+                </div>
+                <div class="info-column">
+                  <h3 id="h31" class="heading heading--5 heading--light">Dubai</h3>
+                  <p id="p1" class="heading heading--5 heading--light heading--muted">UAE</p>
+                </div>
+                <div class="open-positions-column">
+                  <p class="pos1">Open Positions: <span id="open1" class="badge">3</span></p>
+                </div>
               </div>
             </div>
+          
+            <div class="row">
+              <div class="location-container">
+                <div id="image2" class="image-column">
+                  <img src="images/sydney.jpg" alt="Sydney" width="300" height="150" />
+                </div>
+                <div class="info-column">
+                  <h3 id="h32" class="heading heading--5 heading--light">Sydney</h3>
+                  <p id="p2" lass="heading heading--5 heading--light heading--muted">Australia</p>
+                </div>
+                <div class="open-positions-column">
+                  <p class="pos2">Open Positions: <span id="open2" class="badge">2</span></p>
+                </div>
+              </div>
+            </div>
+      
+            <div class="row">
+              <div class="location-container">
+                <div class="image-column">
+                  <img id="image3" src="images/singapore.jpg" alt="Singapore" width="300" height="150" />
+                </div>
+                <div class="info-column">
+                  <h3 id="h33" class="heading heading--5 heading--light">Singapore</h3>
+                  <p id="p3" class="heading heading--5 heading--light heading--muted">Singapore</p>
+                </div>
+                <div class="open-positions-column">
+                  <p class="pos3">Open Positions: <span id="open3" class="badge">1</span></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
           </div>
 
-          <div class="row">
-            <div class="location-container">
-              <div class="image-column">
-                <img src="images/sydney.jpg" alt="Sydney" width="300" height="200" />
-              </div>
-              <div class="info-column">
-                <h3 class="heading heading--5 heading--light">Sydney</h3>
-                <p class="heading heading--5 heading--light heading--muted">Australia</p>
-              </div>
-              <div class="open-positions-column">
-                <p>Open Positions: <span class="badge">0</span></p>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="location-container">
-              <div class="image-column">
-                <img src="images/singapore.jpg" alt="Singapore" width="300" height="200" />
-              </div>
-              <div class="info-column">
-                <h3 class="heading heading--5 heading--light">Singapore</h3>
-                <p class="heading heading--5 heading--light heading--muted">Singapore</p>
-              </div>
-              <div class="open-positions-column">
-                <p>Open Positions: <span class="badge">0</span></p>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <div class="text-with-cta text-center">
           <h2 style="font-size: 60px; font-weight: bold;">Work With Us</h2>
