--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
       <div class="newsHeadline_container">
         <h2 class="news_text">What's Happening</h2>
       </div>
+      <div class="seeMore">
+        <button id="SeeMore">See More</button>
+      </div>
       <div class="newsbox_container">
         <div class="whats_happening">
           <div class="news_today">
