--- a/index.html
+++ b/index.html
@@ -19,8 +19,20 @@
       <div class="Info_container">
         <div class="info_list">
           <ul id="InfoList">
-            <li><a href="about-us.html" style="text-decoration: none; color: white;">ABOUT US</a><img class="dropdownAboutUs" src="images/dropdown_gray.png" alt="ABOUT US DROP DOWN"/></li>
-            <li><a href="news.html" style="text-decoration: none; color: white;">NEWS</a><img class="dropdownNewsUs" src="images/dropdown_gray.png" alt="NEWS DROP DOWN"/></li>
+            <li id="dropdown" class="dropdown"><a href="about-us.html" style="text-decoration: none; color: white;">ABOUT US</a><img class="dropdownAboutUs" src="images/dropdown_gray.png" alt="ABOUT US DROP DOWN"/>
+            <ul id="dropdown_content" class="dropdown_content">
+              <li>Who We are</li>
+              <li>Diversity</li>
+              <li>Social impact</li>
+            </ul>
+            </li>
+            <li id="dropdown" class="dropdown"><a href="news.html" style="text-decoration: none; color: white;">NEWS</a><img class="dropdownNewsUs" src="images/dropdown_gray.png" alt="NEWS DROP DOWN"/>
+              <ul id="dropdown_content" class="dropdown_content">
+                <li>Jobs</li>
+                <li>Benefits</li>
+                <li>Life at Riot</li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
