World Logo - Language Container

--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
       <div class="upper-right_nav">
         <div class="worldLogo_container">
           <img id="world_logo" src="images/world.png" alt="World" />
+          <ul id="language_option" class="language_option">
+            <li>English</li>
+            <li>Japanese</li>
+            <li>Mandarin</li>
+            <li>Hindi</li>
+            <li>Spanish</li>
+            <li>French</li>
+            <li>Indonesian</li>
+            <li>Malaysian</li>
+            <li>Russian</li>
+            <li>Deutsch</li>
+            <li>Italiano</li>
+            <li>Portuguese</li>
+            <li>German</li>
+          </ul>
         </div>
         <div class="search_container">
           <input class="search_box" type="text" placeholder="SEARCH..." />
