Index - Riot Forge Side Scroll

--- a/index.html
+++ b/index.html
@@ -172,10 +172,14 @@
       </div>
     </div>
     <div class="RiotForge_mainContainer">
+      <div class="nextback_arrows">
+        <div><img id="arrowLeft" class="arrowLeft" src="images/arrow_left.png" alt="Black Arrow Left"/></div>
+        <div><img id="arrowRight" class="arrowRight" src="images/arrow_right.png" alt="Black Arrow Right"/></div>
+      </div>
       <div class="RiotForge_container">
         <h1 id="RiotForge">Riot Forge</h1>
       </div>
-      <div class="RiotForgeOption_container">
+      <div class="RiotForgeOption_container" id="RiotForgeOption_container">
         <div class="RiotForge1">
           <img class="img_RiotForge1bg" src="images/mage_bg.jpg" alt="Mage Seeker Background" />
           <img class="img_RiotForge1Logo" src="images/mage_logo.png" alt="Mage Seeker Title" />
@@ -187,6 +191,14 @@
         <div class="RiotForge3">
           <img class="img_RiotForge3bg" src="images/hextech_bg.jpg" alt="Hextech Mayhem Background" />
           <img class="img_RiotForge3Logo" src="images/hextech_logo.png" alt="Hextech Mayhem Title" />
+        </div>
+        <div class="RiotForge4">
+          <img class="img_RiotForge4bg" src="images/convrgence_bg.png" alt="Convrgence Background" />
+          <img class="img_RiotForge4Logo" src="images/convrgence_logo.png" alt="Convrgence Title" />
+        </div>
+        <div class="RiotForge5">
+          <img class="img_RiotForge5bg" src="images/songognunu_bg.jpg" alt="Song of Nunu Background" />
+          <img class="img_RiotForge5Logo" src="images/songofnunu_logo.png" alt="Song of Nunu Title" />
         </div>
       </div>
     </div>
