About Us Page - span issue fixed

--- a/about-us.html
+++ b/about-us.html
@@ -84,7 +84,7 @@
       </div>
       <div class="background-container" style="margin-top: -150px;">
         <div class="text-container text-center">
-          <p style="font-weight: bold; font-size: 40px;">
+          <p id="WeAspire_text" style="font-weight: bold; font-size: 40px;">
             We aspire to be the most player-focused<br />
             game company in the world
           </p>
@@ -136,22 +136,22 @@
         </div>
         <div class="column-container">
           <div class="columns">
-            <div class="column">
+            <div class="column1">
               <span>
                 PLAYER EXPERIENCE<br />
                 FIRST
               </span>
             </div>
-            <div class="column">
+            <div class="column2">
               <span>DARE TO DREAM</span>
             </div>
-            <div class="column">
+            <div class="column3">
               <span>THRIVE TOGETHER</span>
             </div>
-            <div class="column">
+            <div class="column4">
               <span>EXECUTE WITH EXCELLENCE</span>
             </div>
-            <div class="column">
+            <div class="column5">
               <span>STAY HUNGRY; STAY HUMBLE</span>
             </div>
           </div>
@@ -164,7 +164,7 @@
 
             <div class="text-content">
               <h3 style="font-weight: bold; font-size: 35px;">Diversity & Inclusion</h3>
-              <div class="copy prose">
+              <div class="copy_prose">
                 <p style="line-height: 1.38; margin-top: 0; margin-bottom: 0;">
                   We’re focused on making Riot a great home for people<br />
                   who love making games and setting a high bar for<br />
@@ -178,16 +178,14 @@
               </div>
             </div>
           </div>
-
+        </div>
+        <div class="section5b-container">
           <div class="flex-container">
-            <div class="image2-container">
-              <img src="images/champion2.jpg" alt="League Champion1" width="600" height="600" />
-            </div>
 
             <div class="text-content">
               <h3 style="font-weight: bold; font-size: 35px;">Social Impact</h3>
               <div class="copy prose">
-                <p style="line-height: 1.38; margin-top: 0; margin-bottom: 0;">
+                <p style="line-height: 1.5; margin-top: 0; margin-bottom: 0; margin-right: 50px; width: 420px;">
                   Through corporate social responsibility, we hope to<br />
                   apply our unique resources and strengths to create a<br />
                   positive and lasting impact for all of our stakeholders,<br />
@@ -199,6 +197,10 @@
                   <span>Learn More</span>
                 </a>
               </div>
+            </div>
+
+            <div class="image2-container">
+              <img src="images/champion2.jpg" alt="League Champion1" width="600" height="600" />
             </div>
           </div>
         </div>
@@ -231,7 +233,8 @@
                   <p id="p1" class="heading heading--5 heading--light heading--muted">UAE</p>
                 </div>
                 <div class="open-positions-column">
-                  <p class="pos1">Open Positions: <span id="open1" class="badge">3</span></p>
+                  <span id="pos1">Open Positions:</span>
+                  <span id="open1" class="badge">3</span>
                 </div>
               </div>
             </div>
@@ -239,14 +242,15 @@
             <div class="row">
               <div class="location-container">
                 <div id="image2" class="image-column">
-                  <img src="images/sydney.jpg" alt="Sydney" width="300" height="150" />
+                  <img id="image2" src="images/sydney.jpg" alt="Sydney" width="300" height="150" />
                 </div>
                 <div class="info-column">
                   <h3 id="h32" class="heading heading--5 heading--light">Sydney</h3>
                   <p id="p2" lass="heading heading--5 heading--light heading--muted">Australia</p>
                 </div>
                 <div class="open-positions-column">
-                  <p class="pos2">Open Positions: <span id="open2" class="badge">2</span></p>
+                  <span id="pos2">Open Positions:</span>
+                  <span id="open2" class="badge">2</span>
                 </div>
               </div>
             </div>
@@ -261,7 +265,8 @@
                   <p id="p3" class="heading heading--5 heading--light heading--muted">Singapore</p>
                 </div>
                 <div class="open-positions-column">
-                  <p class="pos3">Open Positions: <span id="open3" class="badge">1</span></p>
+                  <span id="pos3">Open Positions:</span>
+                  <span id="open3" class="badge">1</span>
                 </div>
               </div>
             </div>
