--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p class="p1">Don't miss a second of the action at LOLESPORTS.COM</p>
       </div>
       <div class="watchNow_container">
-        <button id="WatchNow_button">Watch Now</button>
+        <a href="https://lolesports.com/"><button id="WatchNow_button">Watch Now</button></a>
       </div>
     </div>
     <div class="news_container">
