Add search-content feature to index

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         </div>
       </div>
     </div>
-    <div class="hero_background">
-      <div class="world_text">
-        <h1>WORLDS 2023</h1>
+    <div class="hero_background" id="WORLDS2023">
+      <div class="world_text" >
+        <h1 >WORLDS 2023</h1>
       </div>
       <div class="h2_text">
         <h2>The Pinnacle of Esports Competition Is <span class="subtext">Back</span></h2>
@@ -78,7 +78,7 @@
         <a href="https://lolesports.com/"><button id="WatchNow_button">Watch Now</button></a>
       </div>
     </div>
-    <div class="news_container">
+    <div class="news_container" id="WhatsHappening">
       <div class="newsHeadline_container">
         <h2 class="news_text">What's Happening</h2>
       </div>
@@ -125,7 +125,7 @@
         </div>
       </div>
     </div>
-    <div class="games_container">
+    <div class="games_container" id="GAMES">
       <div class="games_title">
         <h1 class="games_text">GAMES</h1>
       </div>
@@ -156,13 +156,13 @@
         </div>
       </div>
     </div>
-    <div class="esports_mainContainer">
+    <div class="esports_mainContainer" id="Esports">
       <div class="esports_container">
         <h1 id="esports_text">Esports</h1>
       </div>
       <div class="esportsOption_container">
         <div class="esport1">
-          <img class="img_esport1bg" src="images/esport1.png" alt="LOL Esport Background" />
+          <img class="img_esport1bg" src="images/esport1.png" alt="LOL Esport Background"/>
           <img class="img_lolLogo" src="images/lol_esport.png" alt="LOL Esport Title" />
         </div>
         <div class="esport2">
@@ -171,7 +171,7 @@
         </div>
       </div>
     </div>
-    <div class="RiotForge_mainContainer">
+    <div class="RiotForge_mainContainer" id="RiotForge">
       <div class="nextback_arrows">
         <div><img id="arrowLeft" class="arrowLeft" src="images/arrow_left.png" alt="Black Arrow Left"/></div>
         <div><img id="arrowRight" class="arrowRight" src="images/arrow_right.png" alt="Black Arrow Right"/></div>
@@ -202,7 +202,7 @@
         </div>
       </div>
     </div>
-    <div class="career_container">
+    <div class="career_container" id="Werehiring">
       <div class="hiring_info">
         <h1 id="hiring_text">We're hiring!</h1>
         <p>Team up with Riot to forge your path and craft <span>unforgettable experiences for players</span></p>
