--- a/about-us.html
+++ b/about-us.html
@@ -67,7 +67,7 @@
     </div>
     <main>
       <div class="flex-container">
-        <div class="video-background-container text-center" style="height: 800px; margin-bottom: -100px;">
+        <div class="video-background-container text-center" style="height: 800px; margin-bottom: -100px;" id="WHOAREWE?">
           <video class="video-background" autoplay loop muted>
             <source src="videos/who-are-we-vid.mp4" type="video/mp4" />
             Your browser does not support the video tag.
@@ -131,7 +131,7 @@
         </div>
       </div>
       <div>
-        <div class="heading heading--3">
+        <div class="heading heading--3" id="OurValues">
           <h2 class="text-center" style="font-size: 60px;">Our Values</h2>
         </div>
         <div class="column-container">
@@ -156,13 +156,13 @@
             </div>
           </div>
         </div>
-        <div class="section5-container">
+        <div class="section5-container" id="DiversityInclusion">
           <div class="flex-container">
             <div class="image1-container">
               <img src="images/champion1.jpg" alt="League Champion1" width="600" height="600" />
             </div>
 
-            <div class="text-content">
+            <div class="text-content"  >
               <h3 style="font-weight: bold; font-size: 35px;">Diversity & Inclusion</h3>
               <div class="copy_prose">
                 <p style="line-height: 1.38; margin-top: 0; margin-bottom: 0;">
@@ -179,7 +179,7 @@
             </div>
           </div>
         </div>
-        <div class="section5b-container">
+        <div class="section5b-container" id="SocialImpact">
           <div class="flex-container">
 
             <div class="text-content">
@@ -205,7 +205,7 @@
           </div>
         </div>
 
-        <div class="section6-container">
+        <div class="section6-container" id="WereGlobal">
           <div class="we-are-global-heading">
             <h2 style="font-size: 60px; font-weight: bold;">We are global</h2>
             <p style="font-size: 30px;">
@@ -275,7 +275,7 @@
           </div>
 
 
-        <div class="text-with-cta text-center">
+        <div class="text-with-cta text-center" id="WorkwithUs">
           <h2 style="font-size: 60px; font-weight: bold;">Work With Us</h2>
           <div style="text-align: center;">
             <a href="https://www.riotgames.com/en/work-with-us" class="button" class="button" style="margin-top: 20px; margin-bottom: 20px; display: inline-block;"><span>Explore a career at Riot</span></a>
